CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0012 NEW)
ENDIF(COMMAND CMAKE_POLICY)


PROJECT(ITK_V3D_Plugins)


FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

IF(NOT ITK_USE_REVIEW)
  MESSAGE(FATAL_ERROR "ITK_USE_REVIEW is not ON\nPlease go to your build of ITK and set ITK_USE_REVIEW to ON\nThen come back to the ITK-V3D plugins and try the configuration again.")
ENDIF()

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE( ${QT_USE_FILE} )

INCLUDE(CTest)

INCLUDE(CPack)

#IF( ${ITK_VERSION_MAJOR}.${ITK_VERSION_MINOR} EQUAL 3.20 )
  # correct version
  #ELSE( ${ITK_VERSION_MAJOR}.${ITK_VERSION_MINOR} EQUAL 3.20 )
  # MESSAGE(FATAL_ERROR "You are using ITK ${ITK_VERSION_MAJOR}.${ITK_VERSION_MINOR}. Please use ITK version 3.20")
  #ENDIF( ${ITK_VERSION_MAJOR}.${ITK_VERSION_MINOR} EQUAL 3.20)


FIND_PATH(V3D_BINARY_DIR v3d)
SET(INSTALLATION_DIRECTORY "${V3D_BINARY_DIR}/plugins/Vaa3D_ITK/")

FIND_PATH(V3D_BASIC_C_FUN_SOURCE_DIR v3d_interface.h)
IF( V3D_BASIC_C_FUN_SOURCE_DIR )
  SET( V3D_BASIC_C_FUN_BINARY_DIR  "${PROJECT_BINARY_DIR}/Source/basic_c_fun")
  INCLUDE_DIRECTORIES(BEFORE "${V3D_BASIC_C_FUN_SOURCE_DIR}/../common_lib/include")
ENDIF( V3D_BASIC_C_FUN_SOURCE_DIR )

IF(NOT LIBRARY_OUTPUT_PATH)
  SET (LIBRARY_OUTPUT_PATH
    ${ITK_V3D_Plugins_BINARY_DIR}/bin
    CACHE INTERNAL "Output directory for the shared libraries.")
ENDIF(NOT LIBRARY_OUTPUT_PATH)

INCLUDE(${PROJECT_SOURCE_DIR}/CMake/PluginConfiguration.cmake)

ADD_SUBDIRECTORY(Source)
ADD_SUBDIRECTORY(Testing)

