CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0012 NEW)
ENDIF(COMMAND CMAKE_POLICY)


PROJECT(ITK_V3D_Plugins)


FIND_PACKAGE(ITK 4.1  REQUIRED)
INCLUDE(${ITK_USE_FILE})

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE( ${QT_USE_FILE} )

INCLUDE(CTest)

INCLUDE(CPack)


FIND_PATH(V3D_BINARY_DIR vaa3d)
MESSAGE("found: ${V3D_BINARY_DIR} ")
SET(INSTALLATION_DIRECTORY "${V3D_BINARY_DIR}/plugins/Vaa3D_ITK/")

FIND_PATH(V3D_BASIC_C_FUN_SOURCE_DIR v3d_interface.h)
IF( V3D_BASIC_C_FUN_SOURCE_DIR )
  SET( V3D_BASIC_C_FUN_BINARY_DIR  "${PROJECT_BINARY_DIR}/Source/basic_c_fun")
  INCLUDE_DIRECTORIES(BEFORE "${V3D_BASIC_C_FUN_SOURCE_DIR}/../common_lib/include")
ENDIF( V3D_BASIC_C_FUN_SOURCE_DIR )

IF(NOT LIBRARY_OUTPUT_PATH)
  SET (LIBRARY_OUTPUT_PATH
    ${ITK_V3D_Plugins_BINARY_DIR}/bin
    CACHE INTERNAL "Output directory for the shared libraries.")
ENDIF(NOT LIBRARY_OUTPUT_PATH)

INCLUDE(${PROJECT_SOURCE_DIR}/CMake/V3DITK_PluginConfiguration.cmake)

ADD_SUBDIRECTORY(Source)
ADD_SUBDIRECTORY(Testing)

