# Visit plugin subdirectories if and only if they have a CMakeLists.txt file
file(GLOB CMAKE_DIRS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*/CMakeLists.txt")
foreach(CMAKE_DIR ${CMAKE_DIRS})
    string(REPLACE "//CMakeLists.txt" "" CMAKE_DIR "${CMAKE_DIR}")
    string(REPLACE "/CMakeLists.txt" "" CMAKE_DIR "${CMAKE_DIR}")
    # message(${CMAKE_DIR})
    add_subdirectory(${CMAKE_DIR})
endforeach()

# add_subdirectory( 5dstackconverter )
# add_subdirectory( ada_threshold )
# add_subdirectory( canvas_eraser )
# add_subdirectory( change_pixel_value )
# add_subdirectory( dt )
# add_subdirectory( edge_of_maskimg )
# add_subdirectory( gaussianfilter )
# add_subdirectory( image_xyz_resolution )
# add_subdirectory( linkerfile_generator )
# add_subdirectory( minMaxfilter )
# add_subdirectory( montage_image_z_sections )
# add_subdirectory( recenterimage )
# add_subdirectory( regiongrow )
# add_subdirectory( roi_editor )
# add_subdirectory( rotateimg90 )
# add_subdirectory( simple_movie_from3dviewer )
# add_subdirectory( v3dplugin_call_each_other_example )
# add_subdirectory( v3dplugin_multi_image_interface_example )
# add_subdirectory( v3dplugin_push_image_and_object_example )
# add_subdirectory( v3dplugin_single_image_interface_example )
